2002-08-15  Mikael Hallendal  <micke@codefactory.se>

	* help-converters/man/gnome-man2html.c:
	(scan_table): applied patch from Kjaartan fixing #77895

2002-08-15  Padraig O'Briain  <padraig.obriain@sun.com>

	* help-converters/info/main.c:
	* help-converters/man/gnome-man2html.c:
	Remove setting of BGCOLOR when writing HTML body tag.
	(bug #90655)

2002-08-05  Anders Carlsson  <andersca@gnu.org>

	* configure.in: Release 2.0.2

2002-07-29  Mark McLoughlin  <mark@skynet.ie>

	* monikers/bonobo-config-bag.c:
	(impl_Bonobo_PropertyBag_getKeys),
	(impl_Bonobo_PropertyBag_getType),
	(impl_Bonobo_PropertyBag_getValue),
	(impl_Bonobo_PropertyBag_setValue),
	(impl_Bonobo_PropertyBag_getValues),
	(impl_Bonobo_PropertyBag_getDefault),
	(impl_Bonobo_PropertyBag_getDocTitle),
	(impl_Bonobo_PropertyBag_getDoc),
	(impl_Bonobo_PropertyBag_getFlags): initialise GError* to NULL.
	Should fix crash seen in #89158.

2002-07-25  Pablo Saratxaga  <pablo@mandrakesoft.com>

	* configure.in: Added Bosnian (bs) to ALL_LINGUAS

2002-07-11  Brian Cameron  <Brian.Cameron@sun.com>

	* libgnome/libgnome-2.0.pc.in
	* help-converters/gnome-vfs-module/Makefile.am
	* help-converters/gnome-vfs-module/help-method.c
	* help-converters/info/Makefile.am
	* help-converters/man/Makefile.am
	* help-converters/docbook/Makefile.am
	Now install gnome2-info2html, gnome2-man2html, and gnome2-db2html
	to libexec rather than bin.

2002-07-01  jacob berkman  <jacob@ximian.com>

	* gnome-data/gnome-2.soundlist.in: use login/logout files that
	actually exist (#84774)

2002-06-23  Yanko Kaneti  <yaneti@declera.com>

	* configure.in: (ALL_LINGUAS) Added Bulgarian (bg).

2002-06-12  Jody Goldberg <jody@gnome.org>

	* libgnome/gnome-program.c (gnome_program_module_addtolist) : I
	  suspect you meant new_item_idx ?

2002-06-11  jacob berkman  <jacob@ximian.com>

	* libgnome/gnome-config.c (check_path): prefer strchr to strtok_r
	which seems to be returning garbage on solaris.  helps in building